tools/ffs-ops/src/snapshots/ffs_harness__readiness_action_autopilot__tests__readiness_action_planner_result_order_stable.snap
---
source: crates/ffs-harness/src/readiness_action_autopilot.rs
expression: normal_json
---
{
  "report": {
    "schema_version": 1,
    "report_id": "readiness_action_planner_test_report",
    "generated_at": "2026-05-07T00:00:00Z",
    "source_inputs": [
      {
        "input_id": "beads-open-queue",
        "kind": "beads_jsonl",
        "path": ".beads/issues.jsonl",
        "required": true,
        "state": "present",
        "schema_version": 1
      },
      {
        "input_id": "claimability-plan-permission-gated",
        "kind": "claimability_plan_report",
        "path": "artifacts/claimability_autopilot/permission_gated_zero_claimable/claimability_plan.json",
        "required": true,
        "state": "present",
        "schema_version": 1
      },
      {
        "input_id": "claimability-plan-polluted",
        "kind": "claimability_plan_report",
        "path": "artifacts/claimability_autopilot/polluted_one_claimable/claimability_plan.json",
        "required": true,
        "state": "present",
        "schema_version": 1
      },
      {
        "input_id": "host-capability-manifest",
        "kind": "host_capability_artifact",
        "path": "artifacts/hosts/large_host_capability.json",
        "required": true,
        "state": "permission_required",
        "schema_version": 1
      },
      {
        "input_id": "operational-readiness-report",
        "kind": "operational_readiness_report",
        "path": "artifacts/readiness/operational_readiness_report.json",
        "required": true,
        "state": "missing",
        "schema_version": 1
      },
      {
        "input_id": "proof-bundle-report",
        "kind": "proof_bundle_report",
        "path": "artifacts/proof_bundles/release_gate.json",
        "required": true,
        "state": "contradictory",
        "schema_version": 1
      },
      {
        "input_id": "proof-bundle-report",
        "kind": "proof_bundle_report",
        "path": "artifacts/proof_bundles/swarm_tail_latency.json",
        "required": true,
        "state": "stale",
        "schema_version": 1
      },
      {
        "input_id": "rch-proof-ledger-degraded",
        "kind": "rch_proof_ledger",
        "path": "artifacts/rch/proof_ledgers/remote_success_artifact_warning.json",
        "required": true,
        "state": "present",
        "schema_version": 1
      },
      {
        "input_id": "release-gate-policy",
        "kind": "release_gate_policy",
        "path": "crates/ffs-harness/fixtures/release_gate_policy_v1.json",
        "required": true,
        "state": "present",
        "schema_version": 1
      }
    ],
    "recommendations": [
      {
        "action_id": "preserve-degraded-rch-proof-ledger",
        "title": "Preserve degraded RCH proof ledger",
        "safety_class": "local_safe",
        "controlling_bead": "bd-0chpv.4",
        "mail_thread_id": "bd-0chpv.4",
        "evidence_tier": "proof_bundle",
        "ack_required": false,
        "proof_artifact_path": "artifacts/rch/proof_ledgers/remote_success_artifact_warning.json",
        "safe_next_commands": [
          "preserve worker exit=0 transcript and artifact warning before deciding whether to rerun",
          "reject [RCH] local fallback as proof"
        ],
        "reproduction_command": "ffs-harness rch-proof-ledger --transcript artifacts/rch/transcripts/cargo_check.raw",
        "rationale": "A degraded RCH proof ledger is useful operator evidence, but it must not upgrade readiness by itself.",
        "public_claim_effect": "no_change",
        "diagnostics": [
          {
            "diagnostic_id": "rch-proof-ledger-artifact-warning",
            "severity": "warning",
            "source_kind": "rch_proof_ledger",
            "source_path": "artifacts/rch/proof_ledgers/remote_success_artifact_warning.json",
            "message": "Remote worker success has an artifact retrieval warning.",
            "remediation": "preserve the transcript and use degraded-proof wording instead of upgrading readiness"
          }
        ]
      },
      {
        "action_id": "preserve-foreign-owner-handoff",
        "title": "Preserve foreign tracker rows for owner handoff",
        "safety_class": "local_safe",
        "controlling_bead": "bd-0chpv.2",
        "mail_thread_id": "tracker-hygiene",
        "evidence_tier": "tracker_only",
        "ack_required": false,
        "safe_next_commands": [
          "message owner project before moving, closing, rewriting, or claiming foreign rows"
        ],
        "reproduction_command": "ffs-harness claimability-plan --tracker-report polluted_tracker_source_hygiene_report.json",
        "rationale": "Polluted tracker rows are advisory owner-handoff evidence, not local readiness work.",
        "public_claim_effect": "no_change"
      },
      {
        "action_id": "claim-source-aware-task",
        "title": "Claim source-aware task from claimability plan",
        "safety_class": "local_safe",
        "controlling_bead": "bd-0chpv.5",
        "mail_thread_id": "bd-0chpv.5",
        "evidence_tier": "tracker_only",
        "ack_required": false,
        "reservation_artifact_path": "artifacts/agent_mail/reservations/bd-0chpv.5.json",
        "safe_next_commands": [
          "br update --no-db --json --actor <agent> --claim bd-0chpv.5",
          "file_reservation_paths(project_key, agent_name, exact_paths, reason=\"bd-0chpv.5\")"
        ],
        "reproduction_command": "ffs-harness claimability-plan --tracker-report tracker_source_hygiene_report.json",
        "rationale": "Claimability planner output can identify one safe local task, but it is operator evidence only and does not change readiness claims.",
        "public_claim_effect": "no_change"
      },
      {
        "action_id": "define-readiness-action-schema",
        "title": "Define readiness action autopilot schema and fixtures",
        "safety_class": "local_safe",
        "controlling_bead": "bd-rchk0.98.1",
        "evidence_tier": "tracker_only",
        "ack_required": false,
        "reproduction_command": "cargo test -p ffs-harness readiness_action_autopilot",
        "rationale": "The only required changes are local schema and fixture tests.",
        "public_claim_effect": "no_change"
      },
      {
        "action_id": "block-permission-gated-claimability-row",
        "title": "Block permission-gated claimability row",
        "safety_class": "permissioned",
        "controlling_bead": "bd-rchk3.3",
        "mail_thread_id": "bd-rchk3.3",
        "evidence_tier": "tracker_only",
        "ack_required": true,
        "safe_next_commands": [
          "do not run without XFSTESTS_REAL_RUN_ACK=xfstests-may-mutate-test-and-scratch-devices"
        ],
        "reproduction_command": "XFSTESTS_REAL_RUN_ACK=xfstests-may-mutate-test-and-scratch-devices scripts/e2e/ffs_xfstests_e2e.sh",
        "rationale": "The claimability plan preserves permission-gated rows as blocked work until the exact operator ACK is present.",
        "public_claim_effect": "block_upgrade",
        "diagnostics": [
          {
            "diagnostic_id": "claimability-permission-gate-present",
            "severity": "warning",
            "source_kind": "claimability_plan_report",
            "source_path": "artifacts/claimability_autopilot/permission_gated_zero_claimable/claimability_plan.json",
            "message": "Claimability planner reported a permission-gated queue row.",
            "remediation": "keep the action dry-run-only until the operator supplies the exact ACK"
          },
          {
            "diagnostic_id": "planner-xfstests-real-run-evidence-missing",
            "severity": "error",
            "source_kind": "operational_readiness_report",
            "message": "No current xfstests real-run report is present for this action.",
            "remediation": "capture pass/fail/not-run artifacts before upgrading xfstests readiness claims"
          }
        ]
      },
      {
        "action_id": "run-permissioned-xfstests-baseline",
        "title": "Run permissioned xfstests baseline",
        "safety_class": "permissioned",
        "controlling_bead": "bd-rchk3.3",
        "evidence_tier": "operational_readiness",
        "ack_required": true,
        "reproduction_command": "XFSTESTS_REAL_RUN_ACK=xfstests-may-mutate-test-and-scratch-devices scripts/e2e/ffs_xfstests_e2e.sh",
        "rationale": "The current queue contains xfstests work that cannot run without explicit mutation authorization.",
        "public_claim_effect": "block_upgrade",
        "diagnostics": [
          {
            "diagnostic_id": "planner-input-operational-readiness-report-missing",
            "severity": "error",
            "source_kind": "operational_readiness_report",
            "source_path": "artifacts/readiness/operational_readiness_report.json",
            "message": "Required operational_readiness_report input operational-readiness-report is missing.",
            "remediation": "provide the missing artifact before acting"
          },
          {
            "diagnostic_id": "planner-xfstests-real-run-evidence-missing",
            "severity": "error",
            "source_kind": "operational_readiness_report",
            "source_path": "artifacts/readiness/operational_readiness_report.json",
            "message": "No current xfstests real-run report is present for this action.",
            "remediation": "capture pass/fail/not-run artifacts before upgrading xfstests readiness claims"
          },
          {
            "diagnostic_id": "xfstests-real-run-ack-missing",
            "severity": "error",
            "source_kind": "operational_readiness_report",
            "source_path": "artifacts/readiness/operational_readiness_report.json",
            "message": "No real xfstests pass/fail artifact is present.",
            "remediation": "Obtain explicit operator authorization before running the mutating baseline."
          }
        ]
      },
      {
        "action_id": "refresh-large-host-swarm-campaign",
        "title": "Refresh large-host swarm responsiveness evidence",
        "safety_class": "permissioned",
        "controlling_bead": "bd-rchk0.53.8",
        "evidence_tier": "authoritative",
        "ack_required": true,
        "reproduction_command": "FFS_ENABLE_PERMISSIONED_SWARM_WORKLOAD=1 FFS_SWARM_WORKLOAD_REAL_RUN_ACK=swarm-workload-may-use-permissioned-large-host scripts/e2e/ffs_swarm_workload_harness_e2e.sh",
        "rationale": "Large-host responsiveness claims require fresh authoritative host evidence.",
        "public_claim_effect": "downgrade_required",
        "diagnostics": [
          {
            "diagnostic_id": "planner-input-host-capability-manifest-permission_required",
            "severity": "warning",
            "source_kind": "host_capability_artifact",
            "source_path": "artifacts/hosts/large_host_capability.json",
            "message": "Required host_capability_artifact input host-capability-manifest is permission_required.",
            "remediation": "obtain explicit operator authorization before acting"
          },
          {
            "diagnostic_id": "planner-input-proof-bundle-report-stale",
            "severity": "warning",
            "source_kind": "proof_bundle_report",
            "source_path": "artifacts/proof_bundles/swarm_tail_latency.json",
            "message": "Required proof_bundle_report input proof-bundle-report is stale.",
            "remediation": "refresh the stale artifact before acting"
          },
          {
            "diagnostic_id": "planner-large-host-capability-missing",
            "severity": "error",
            "source_kind": "host_capability_artifact",
            "source_path": "artifacts/hosts/large_host_capability.json",
            "message": "No present large-host capability artifact backs this swarm action.",
            "remediation": "publish host capability proof before treating large-host evidence as authoritative"
          },
          {
            "diagnostic_id": "swarm-evidence-stale",
            "severity": "warning",
            "source_kind": "proof_bundle_report",
            "source_path": "artifacts/proof_bundles/swarm_tail_latency.json",
            "message": "The swarm tail-latency proof bundle is beyond its freshness window.",
            "remediation": "Rerun on a permissioned large host before upgrading readiness wording.",
            "stale_age_days": 31,
            "freshness_ttl_days": 14
          }
        ]
      },
      {
        "action_id": "refuse-contradictory-readiness-upgrade",
        "title": "Refuse contradictory readiness upgrade",
        "safety_class": "impossible",
        "controlling_bead": "bd-rchk0",
        "evidence_tier": "proof_bundle",
        "ack_required": false,
        "reproduction_command": "cargo test -p ffs-harness release_gate -- --nocapture",
        "rationale": "A public readiness upgrade is impossible while proof-bundle and release-gate evidence disagree.",
        "public_claim_effect": "block_upgrade",
        "diagnostics": [
          {
            "diagnostic_id": "planner-input-proof-bundle-report-contradictory",
            "severity": "error",
            "source_kind": "proof_bundle_report",
            "source_path": "artifacts/proof_bundles/release_gate.json",
            "message": "Required proof_bundle_report input proof-bundle-report is contradictory.",
            "remediation": "resolve contradictory evidence before acting"
          },
          {
            "diagnostic_id": "release-gate-proof-contradiction",
            "severity": "error",
            "source_kind": "proof_bundle_report",
            "source_path": "artifacts/proof_bundles/release_gate.json",
            "message": "The proof bundle contradicts the release-gate policy state.",
            "remediation": "Resolve the artifact conflict before changing README or FEATURE_PARITY readiness claims."
          }
        ]
      }
    ]
  },
  "suppressed_duplicates": []
}
